force-app/main/default/objects/Holiday__c/Holiday__c.object-meta.xml
<CustomObject>
    <description>This object stores a list of all company-observed non-working days, including public holidays or specific company-wide closures. These dates are crucial for accurately calculating the actual number of working days within a submitted leave request.</description>
    <label>Holiday</label>
    <nameField>
        <label>Holiday Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Holidays</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>