force-app/main/default/objects/Holiday__c/fields/Deduction_Value__c.field-meta.xml
<CustomField>
    <fullName>Deduction_Value__c</fullName>
    <defaultValue>1.0</defaultValue>
    <label>Deduction Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>