force-app/main/default/objects/Holiday__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Optional space for any additional details about the holiday.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>