force-app/main/default/objects/Holiday__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The end date of the holiday. For single-day holidays, this should be the same as the Start Date.</description>
    <inlineHelpText>For single-day holidays, enter the same date as the Start Date.</inlineHelpText>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>