force-app/main/default/objects/Holiday__c/validationRules/Prevent_Past_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Past_Date</fullName>
    <active>true</active>
    <errorConditionFormula>YEAR(Start_Date__c) &lt; YEAR(TODAY())</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>The year of the holiday cannot be in the past. Please select a date in the current year or a future year.</errorMessage>
</ValidationRule>